cabal-version:      3.0
name:               Navix
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             xsj3n
maintainer:         ""
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Navix
    import:           warnings
    main-is:          Main.hs

    
    other-modules:    DatabaseInterface,
                      DataSchema,
                      PollResponse,
                      Registration,
                      PKI 
    
    build-depends:  aeson,
                    directory,
                    string-interpolate,
                    postgresql-simple,
                    crypton,
                    pem,
                    crypton-x509,
                    crypton-x509-validation,
                    crypton-x509-store,
                    bytestring,
                    uuid,
                    process,
                    text,
                    http-types,
                    zlib,
                    extra,
                    warp,
                    warp-tls,
                    tls,
                    wai,
                    network,
                    base


    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   app
    default-language: GHC2024

test-suite pki-test
    type: exitcode-stdio-1.0
    hs-source-dirs: tests/pki, app
    main-is: Test.hs
    build-depends: base,
                   Navix
